# DynaMix2skill

./: .gitignore  README.md  evaluate_with_official.py  pyproject.toml  run_spreadsheetbench.py  spreadsheetbench_support.py
configs/: dynamix_static_qwen.json
configs/experiments/: qwen_train200_tree_main_001.json
docs/: OFFICEQA_PROMPTFIX_TODO.md  experiment_results_before_conditional_l1plus_20260713.md  main_figure_algorithm_flow_spec.md  nodebank_tasktype_retrieval_experiment.md  static_dynamic_algorithm_overview.md  static_experiment_result_20260702_chunk28000_minsplit4.md
research/skill_tree_refinement/: idea.md
scripts/: build_dynamix_tree.py  build_skillbank_index.py  evaluate_officeqa_results.py  export_dynamix_nodebank.py  extract_officeqa_records.py  extract_trace2skill_logs.py  install_dynamix_skill.py  officeqa_runner_common.py  prepare_officeqa_data.py  resume_dynamix_tree_from_l1.py  run_dynamix_trace2skill_experiment.py  run_handoff_static_dynamic_experiment.sh  run_nodebank_train200_heldout.sh  run_officeqa_benchmark.py  run_officeqa_dynamix_experiment.py  run_officeqa_static_smoke.sh  run_officeqa_vanilla_test.py  run_officeqa_vanilla_test.sh  run_spreadsheetbench_full_soft_hard_eval.py  start_spreadsheet_awq_retrain200_recalc_tree_v1.sh
spreadsheet_agent/agents/: base.py  cli_only_agent.py  cli_skill_preloaded_agent.py
spreadsheet_agent/system_prompt/: cli_only_full_system_v1.txt  cli_skill_preloaded_full_system_v1.txt
spreadsheet_agent/tools/: bash.py
tests/: test_dynamix_reuse_contracts.py  test_officeqa_integration.py
(+89 files in other folders)
