[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trace2skill-dynamix-reuse"
version = "0.4.0"
description = "DynaMix-HSPI integration layer for Trace2Skill reuse experiments"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
